--- a/build_scripts/admin/debian_packaging/dh_python2/debian/changelog
+++ b/build_scripts/admin/debian_packaging/dh_python2/debian/changelog
@@ -1,3 +1,17 @@
+openmolar-admin (2.0.66+hg027-1~__DIST__0) __DIST__; urgency=low
+
+  * added postinst script to create symlink in /etc/openmolar/client/connections* etc..
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 20 Jul 2012 12:28:36 +0100
+
+
+openmolar-admin (2.0.66+hg027-0~__DIST__0) __DIST__; urgency=low
+
+  * new upstream "release"
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Thu, 19 Jul 2012 17:10:47 +0100
+
+
 openmolar-admin (2.0.65+hg027-0~__DIST__0) __DIST__; urgency=low
 
   * trial build
