--- a/build_scripts/common/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/common/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-common (2.0.66+hg031-0~__DIST__0) __DIST__; urgency=low
+
+  * new upstream "release"
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Thu, 19 Jul 2012 17:10:19 +0100
+
+
 openmolar-common (2.0.65+hg031-0~__DIST__0) __DIST__; urgency=low
 
   * trial build
