--- a/build_scripts/namespace/debian_packaging/dh_python2/debian/changelog
+++ b/build_scripts/namespace/debian_packaging/dh_python2/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-namespace (2.0.66-0~__DIST__0) __DIST__; urgency=low
+
+  * new upstream "release"
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Thu, 19 Jul 2012 17:10:13 +0100
+
+
 openmolar-namespace (2.0.65-1~__DIST__0) __DIST__; urgency=low
 
   * trial build
