--- a/build_scripts/server/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/server/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-server (2.0.66+hg015-0~__DIST__0) __DIST__; urgency=low
+
+  * new upstream "release"
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Thu, 19 Jul 2012 17:10:51 +0100
+
+
 openmolar-server (2.0.65+hg015-0~__DIST__0) __DIST__; urgency=low
 
   * trial build
