--- a/build_scripts/admin/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/admin/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-admin (2.0.70+hg029-0~__DIST__0) __DIST__; urgency=low
+
+  * new upstream "release"
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Sat, 28 Jul 2012 22:50:54 +0100
+
+
 openmolar-admin (2.0.69+hg028-1~__DIST__0) __DIST__; urgency=low
 
   * changed postinst so that symlink is forced (if already present)
