--- a/build_scripts/namespace/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/namespace/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-namespace (2.0.70-0~__DIST__0) __DIST__; urgency=low
+
+  * new upstream "release"
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Sat, 28 Jul 2012 22:50:14 +0100
+
+
 openmolar-namespace (2.0.69-0~__DIST__0) __DIST__; urgency=low
 
   * new upstream "release"
