--- a/build_scripts/server/debian_packaging/dh_python2/debian/changelog
+++ b/build_scripts/server/debian_packaging/dh_python2/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-server (2.0.70+hg017-0~__DIST__0) __DIST__; urgency=low
+
+  * new upstream "release"
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Sat, 28 Jul 2012 22:51:07 +0100
+
+
 openmolar-server (2.0.69+hg016-0~__DIST__0) __DIST__; urgency=low
 
   * new upstream "release"
