--- a/build_scripts/admin/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/admin/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-admin (2.0.70+hg030-0~__DIST__0) __DIST__; urgency=low
+
+  * new upstream "release"
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 07 Aug 2012 11:41:42 +0100
+
+
 openmolar-admin (2.0.70+hg029-0~__DIST__0) __DIST__; urgency=low
 
   * new upstream "release"
