--- a/build_scripts/client/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/client/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-client (2.0.70+hg022-0~__DIST__0) __DIST__; urgency=low
+
+  * new upstream "release"
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 07 Aug 2012 11:41:27 +0100
+
+
 openmolar-client (2.0.70+hg021-0~__DIST__0) __DIST__; urgency=low
 
   * new upstream "release"
