--- a/build_scripts/common/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/common/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-common (2.0.70+hg033-0~__DIST__0) __DIST__; urgency=low
+
+  * new upstream "release"
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 07 Aug 2012 11:41:11 +0100
+
+
 openmolar-common (2.0.70+hg032-0~__DIST__0) __DIST__; urgency=low
 
   * new upstream "release"
