--- a/build_scripts/namespace/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/namespace/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-namespace (2.0.70-1~__DIST__0) __DIST__; urgency=low
+
+  * new upstream "release"
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 07 Aug 2012 11:40:06 +0100
+
+
 openmolar-namespace (2.0.70-0~__DIST__0) __DIST__; urgency=low
 
   * new upstream "release"
