--- a/build_scripts/server/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/server/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-server (2.0.70+hg018-0~__DIST__0) __DIST__; urgency=low
+
+  * new upstream "release"
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 07 Aug 2012 11:41:56 +0100
+
+
 openmolar-server (2.0.70+hg017-0~__DIST__0) __DIST__; urgency=low
 
   * new upstream "release"
