--- a/build_scripts/admin/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/admin/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-admin (2.0.72+hg034-0~__DIST__0) __DIST__; urgency=low
+
+  * test build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 10 Aug 2012 21:38:42 +0100
+
+
 openmolar-admin (2.0.71+hg033-0~__DIST__0) __DIST__; urgency=low
 
   * new upstream
