--- a/build_scripts/common/debian_packaging/dh_python2/debian/changelog
+++ b/build_scripts/common/debian_packaging/dh_python2/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-common (2.0.72+hg037-0~__DIST__0) __DIST__; urgency=low
+
+  * test build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 10 Aug 2012 21:38:27 +0100
+
+
 openmolar-common (2.0.71+hg036-0~__DIST__0) __DIST__; urgency=low
 
   * new upstream
