--- a/build_scripts/namespace/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/namespace/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-namespace (2.0.72-0~__DIST__0) __DIST__; urgency=low
+
+  * test build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 10 Aug 2012 21:37:52 +0100
+
+
 openmolar-namespace (2.0.71-1~__DIST__0) __DIST__; urgency=low
 
   * test build
