--- a/build_scripts/server/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/server/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-server (2.0.72+hg022-0~__DIST__0) __DIST__; urgency=low
+
+  * test build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 10 Aug 2012 21:38:53 +0100
+
+
 openmolar-server (2.0.71+hg021-0~__DIST__0) __DIST__; urgency=low
 
   * bugfix (broken import)
