--- a/build_scripts/server/debian_packaging/dh_python2/debian/changelog
+++ b/build_scripts/server/debian_packaging/dh_python2/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-server (2.0.73+hg022-0~__DIST__0) __DIST__; urgency=low
+
+  * bugfix of server installer import
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 10 Aug 2012 22:43:05 +0100
+
+
 openmolar-server (2.0.72+hg022-0~__DIST__0) __DIST__; urgency=low
 
   * test build
