--- a/build_scripts/admin/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/admin/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-admin (2.0.74+hg034-0~__DIST__0) __DIST__; urgency=low
+
+  * new upstream "release"
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Sat, 11 Aug 2012 01:36:01 +0100
+
+
 openmolar-admin (2.0.72+hg034-0~__DIST__0) __DIST__; urgency=low
 
   * test build
