--- a/build_scripts/client/debian_packaging/dh_python2/debian/changelog
+++ b/build_scripts/client/debian_packaging/dh_python2/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-client (2.0.74+hg024-0~__DIST__0) __DIST__; urgency=low
+
+  * new upstream "release"
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Sat, 11 Aug 2012 01:35:56 +0100
+
+
 openmolar-client (2.0.72+hg023-0~__DIST__0) __DIST__; urgency=low
 
   * test build
