--- a/build_scripts/common/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/common/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-common (2.0.74+hg038-0~__DIST__0) __DIST__; urgency=low
+
+  * new upstream "release"
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Sat, 11 Aug 2012 01:35:43 +0100
+
+
 openmolar-common (2.0.72+hg037-0~__DIST__0) __DIST__; urgency=low
 
   * test build
