--- a/build_scripts/server/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/server/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-server (2.0.74+hg025-0~__DIST__0) __DIST__; urgency=low
+
+  * new upstream "release"
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Sat, 11 Aug 2012 01:36:08 +0100
+
+
 openmolar-server (2.0.72+hg022-0~__DIST__0) __DIST__; urgency=low
 
   * test build
