--- a/build_scripts/client/debian_packaging/dh_python2/debian/changelog
+++ b/build_scripts/client/debian_packaging/dh_python2/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-client (2.0.75+hg024-0~__DIST__0) __DIST__; urgency=low
+
+  * nightly build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 14 Aug 2012 01:54:09 +0100
+
+
 openmolar-client (2.0.74+hg024-0~__DIST__0) __DIST__; urgency=low
 
   * new upstream "release"
