--- a/build_scripts/admin/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/admin/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-admin (2.0.77+hg036-0~__DIST__0) __DIST__; urgency=low
+
+  * nightly build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 15 Aug 2012 00:10:57 +0100
+
+
 openmolar-admin (2.0.76+hg035-0~__DIST__0) __DIST__; urgency=low
 
   * nightly build
