--- a/build_scripts/client/debian_packaging/dh_python2/debian/changelog
+++ b/build_scripts/client/debian_packaging/dh_python2/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-client (2.0.77+hg024-0~__DIST__0) __DIST__; urgency=low
+
+  * nightly build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 15 Aug 2012 00:10:55 +0100
+
+
 openmolar-client (2.0.76+hg024-0~__DIST__0) __DIST__; urgency=low
 
   * nightly build
