--- a/build_scripts/server/debian_packaging/dh_python2/debian/changelog
+++ b/build_scripts/server/debian_packaging/dh_python2/debian/changelog
@@ -1,3 +1,24 @@
+openmolar-server (2.0.78+hg028-1~__DIST__0) __DIST__; urgency=low
+
+  * new postrm script
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 15 Aug 2012 14:43:22 +0100
+
+
+openmolar-server (2.0.78+hg028-0~__DIST__0) __DIST__; urgency=low
+
+  * new prerm and postrm scripts.
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 15 Aug 2012 13:41:20 +0100
+
+
+openmolar-server (2.0.77+hg028-0~__DIST__0) __DIST__; urgency=low
+
+  * upstream release
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 15 Aug 2012 00:11:10 +0100
+
+
 openmolar-server (2.0.76+hg026-0~__DIST__0) __DIST__; urgency=low
 
   * nightly build
