--- a/build_scripts/server/debian_packaging/dh_python2/debian/changelog
+++ b/build_scripts/server/debian_packaging/dh_python2/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-server (2.0.81+hg029-0~__DIST__0) __DIST__; urgency=low
+
+  * new postinst scripts
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Thu, 16 Aug 2012 11:34:04 +0100
+
+
 openmolar-server (2.0.80+hg029-0~__DIST__0) __DIST__; urgency=low
 
   * nightly build
