--- a/build_scripts/server/debian_packaging/dh_python2/debian/changelog
+++ b/build_scripts/server/debian_packaging/dh_python2/debian/changelog
@@ -1,3 +1,17 @@
+openmolar-server (2.0.82+hg030-0~__DIST__0) __DIST__; urgency=low
+
+  * new installer calling openmolar-alter-master-user
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Thu, 16 Aug 2012 20:41:25 +0100
+
+
+openmolar-server (2.0.82+hg029-0~__DIST__0) __DIST__; urgency=low
+
+  * new postinst scripts
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Thu, 16 Aug 2012 12:42:29 +0100
+
+
 openmolar-server (2.0.81+hg029-0~__DIST__0) __DIST__; urgency=low
 
   * new postinst scripts
