--- a/build_scripts/namespace/debian_packaging/dh_python2/debian/changelog
+++ b/build_scripts/namespace/debian_packaging/dh_python2/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-namespace (2.0.86-0~__DIST__0) __DIST__; urgency=low
+
+  * nightly build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 21 Aug 2012 23:15:23 +0100
+
+
 openmolar-namespace (2.0.85-0~__DIST__0) __DIST__; urgency=low
 
   * nightly build
